[gd_scene load_steps=2 format=3 uid="uid://dh7nmg5urdedc"]

[ext_resource type="Script" uid="uid://blkxfiydqpmjr" path="res://UI/check_inventory_ui.gd" id="1_mtc87"]

[node name="yourInventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtc87")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(9.818673e-06, 0.6769932, 0.9136383, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your inventory"
horizontal_alignment = 1

[node name="ButtonExample" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ButtonExample"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="itemName" type="Label" parent="VBoxContainer/ButtonExample/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="inInventory" type="Label" parent="VBoxContainer/ButtonExample/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="description" type="Label" parent="VBoxContainer/ButtonExample/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
